--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.11",
     "morgan": "~1.9.0",
     "pg": "^7.7.1",
+    "request": "^2.88.0",
     "sequelize": "^4.41.2"
   },
   "devDependencies": {
