--- a/package.json
+++ b/package.json
@@ -21,10 +21,16 @@
   },
   "dependencies": {
     "@nestjs/common": "^5.4.0",
-    "@nestjs/core": "^5.4.0", 
+    "@nestjs/core": "^5.4.0",
+    "@nestjs/typeorm": "^5.2.2",
+    "@types/joi": "^14.0.1",
+    "dotenv": "^6.2.0",
+    "joi": "^14.3.1",
+    "pg": "^7.7.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.2.2",
+    "typeorm": "^0.2.10",
     "typescript": "^3.0.1"
   },
   "devDependencies": {
@@ -44,7 +50,11 @@
     "tslint": "5.11.0"
   },
   "jest": {
-    "moduleFileExtensions": ["js", "json", "ts"],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
     "rootDir": "src",
     "testRegex": ".spec.ts$",
     "transform": {
