--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "author": "Appnroll",
   "license": "MIT",
   "scripts": {
+    "postinstall": "npm run build && touch ./dist/production.env",
     "build": "tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\"",
+    "start-local": "cross-env NODE_ENV=development ts-node -r tsconfig-paths/register src/main.ts",
     "start": "cross-env NODE_ENV=development ts-node -r tsconfig-paths/register src/main.ts",
     "start:dev": "nodemon",
     "start:debug": "nodemon --config nodemon-debug.json",
