--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "postinstall": "npm run build && touch ./dist/production.env",
     "build": "tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\"",
-    "start-local": "cross-env NODE_ENV=development ts-node -r tsconfig-paths/register src/main.ts",
     "start": "cross-env NODE_ENV=development ts-node -r tsconfig-paths/register src/main.ts",
     "start:dev": "nodemon",
     "start:debug": "nodemon --config nodemon-debug.json",
@@ -19,7 +18,10 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "test:e2e:watch": "cross-env jest --watch --config ./test/jest-e2e.json --runInBand"
+    "test:e2e:watch": "cross-env jest --watch --config ./test/jest-e2e.json --runInBand",
+    "migration:generate": "ts-node ./node_modules/typeorm/cli.js migration:generate -n",
+    "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run",
+    "migration:revert": "ts-node ./node_modules/typeorm/cli.js migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^5.4.0",
