--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@nestjs/core": "^5.4.0",
     "@nestjs/typeorm": "^5.2.2",
     "@types/joi": "^14.0.1",
+    "@types/lodash": "^4.14.119",
     "dotenv": "^6.2.0",
     "joi": "^14.3.1",
+    "lodash": "^4.17.11",
     "mysql": "^2.16.0",
     "pg": "^7.7.1",
     "reflect-metadata": "^0.1.12",
