--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,8 @@ PORT=
 ENTITIES=
 SYNCHRONIZE=
 LOGGING=
-SLACK_OAUTH_TOKEN
+SLACK_OAUTH_TOKEN=
+TRELLO_OAUTH=
+TRELLO_KEY=
+TRELLO_TOKEN=
+TRELLO_KUDOS_BOARD_ID=
