--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kup-kudosapp-backend",
+  "name": "kudosapp-backend",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -7,7 +7,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Appnroll/kup-kudosapp-backend.git"
+    "url": "git+https://github.com/Appnroll/kudosapp-backend.git"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
