--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash": "^4.17.11",
     "nestjs-config": "^1.2.9",
     "pg": "^7.7.1",
+    "query-string": "^6.2.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.2.2",
