--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^6.2.0",
     "joi": "^14.3.1",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "nestjs-config": "^1.2.9",
     "pg": "^7.7.1",
     "query-string": "^6.2.0",
