Test fixes Various small tweaks

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,16 @@
-TYPE=
-HOST=
-USERNAME=
-PASSWORD=
-DATABASE=
-PORT=
-ENTITIES=
-SYNCHRONIZE=
-LOGGING=
+DB_TYPE=
+DB_HOST=
+DB_USERNAME=
+DB_PASSWORD=
+DB_DATABASE=
+DB_PORT=
+DB_SYNCHRONIZE=
+DB_LOGGING=
+SLACK_AFTER_LOGIN_REDIRECT=
+SLACK_API=
+SLACK_REDIRECT_URI=
+SLACK_CLIENT_SECRET=
+SLACK_CLIENT_ID=
 SLACK_OAUTH_TOKEN=
 TRELLO_OAUTH=
 TRELLO_KEY=
