--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/typeorm": "^5.2.2",
     "@types/joi": "^14.0.1",
     "@types/lodash": "^4.14.119",
+    "cross-env": "^5.2.0",
     "dotenv": "^6.2.0",
     "joi": "^14.3.1",
     "lodash": "^4.17.11",
