--- a/.env.test
+++ b/.env.test
@@ -1,7 +1,7 @@
 DB_TYPE=postgres
 DB_HOST=localhost
 DB_USERNAME=postgres
-DB_PASSWORD=pppppp
+DB_PASSWORD=
 DB_NAME=kudos_test
 DB_PORT=5432
 DB_SYNCHRONIZE=true
