Fixed poll app token - changed to bot

--- a/.env.example
+++ b/.env.example
@@ -2,17 +2,22 @@ DB_TYPE=
 DB_HOST=
 DB_USERNAME=
 DB_PASSWORD=
-DB_DATABASE=
+DB_NAME=
 DB_PORT=
 DB_SYNCHRONIZE=
 DB_LOGGING=
-SLACK_AFTER_LOGIN_REDIRECT=
-SLACK_API=
+SLACK_OAUTH_TOKEN=
+SLACK_TOKEN=
 SLACK_REDIRECT_URI=
 SLACK_CLIENT_SECRET=
 SLACK_CLIENT_ID=
-SLACK_OAUTH_TOKEN=
+SLACK_API=
+SLACK_AFTER_LOGIN_REDIRECT=
 TRELLO_OAUTH=
 TRELLO_KEY=
 TRELLO_TOKEN=
 TRELLO_KUDOS_BOARD_ID=
+POOL_SLACK_AUTH_TOKEN=
+POOL_SLACK_TOKEN=
+POOL_CLIENT_SECRET=
+POOL_CLIENT_ID=
